@@ -2,7 +2,6 @@ package ch.uzh.ifi.hase.soprafs25.service.image;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public interface ImageService {
@@ -14,6 +13,6 @@ public interface ImageService {
     default List<CompletableFuture<byte[]>> fetchImagesByLocationAsync(String location, int count) {
         return IntStream.range(0, count)
                 .mapToObj(i -> fetchImageByLocationAsync(location))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
